add testimonial slider

--- a/themes/RogersHood-theme/assets/css/blocks/benefits-section.css
+++ b/themes/RogersHood-theme/assets/css/blocks/benefits-section.css
@@ -16,8 +16,8 @@
 }
 
 .benefits-card-container {
-	text-align: left;
 	margin-top: 64px;
+	text-align: left;
 }
 
 .benefit-card-item {
@@ -33,7 +33,7 @@
 }
 
 @media only screen and (min-width: 639px) {
-	.splide.is-initialized:not(.is-active) .splide__list {
+	.splide.is-initialized:not(.is-active) .benefit-card-list.splide__list {
 		display: grid;
 		gap: 8px;
 		grid-template-columns: repeat(2, 1fr);
@@ -45,7 +45,7 @@
 		padding: 100px 65px 100px 110px;
 	}
 
-	.splide.is-initialized:not(.is-active) .splide__list {
+	.splide.is-initialized:not(.is-active) .benefit-card-list.splide__list {
 		grid-template-columns: repeat(4, 1fr);
 	}
 }
