--- a/themes/RogersHood-theme/assets/css/frontend/editor-style-overrides.css
+++ b/themes/RogersHood-theme/assets/css/frontend/editor-style-overrides.css
@@ -5,3 +5,9 @@
  * Copyright (c) 2017 10up
  * Licensed under the MIT license.
  */
+
+
+.rh-block {
+	max-width: 100% !important;
+	width: 100% !important;
+}
