Color naming and bg- classes

--- a/themes/RogersHood-theme/assets/css/frontend/global/colors.css
+++ b/themes/RogersHood-theme/assets/css/frontend/global/colors.css
@@ -7,7 +7,7 @@
  */
 
 /* :root {
-	--c-light-blue: #000;
+	--c-c-light-blue: #000;
 	--c-beige: #fff;
 	--c-green: #627479;
 	--c-light-beige: #F2F1EF;
@@ -24,14 +24,15 @@
 	--c-off-black: #5c5c5c;
 
 	--cart-background-beige: #f9f9f9;
-	--blue-background: #e0eaf7;
 	--c-category-fab-background: #e0eaf7;
-	--c-peach-light: #faf8f4;
+	--c-green: #627479;
 	--c-ivory: #fcfbfb;
+	--c-light-beige: #faf8f4;
+	--c-light-blue: #`e0eaf7`;
 }
 
 .bg-blue {
-	background-color: var(--blue-background);
+	background-color: var(--c-light-blue);
 }
 
 .bg-beige {
@@ -43,11 +44,11 @@
 }
 
 .bg-gradient-blue {
-	background: linear-gradient(180deg, #e0eaf7 0%, #c2d1dc 100%);
+	background: linear-gradient(180deg, var(--c-light-blue) 0%, #c2d1dc 100%);
 }
 
-.bg-peach-light {
-	background-color: var(--c-peach-light);
+.bg-light-beige {
+	background-color: var(--c-light-beige);
 }
 
 .bg-ivory {
