--- a/themes/RogersHood-theme/assets/css/frontend/components/slick.css
+++ b/themes/RogersHood-theme/assets/css/frontend/components/slick.css
@@ -1,14 +1,11 @@
 /* stylelint-disable */
 
-
 /* Dots */
-.slick-dotted.slick-slider
-{
+.slick-dotted.slick-slider {
 	margin-bottom: 30px;
 }
 
-.slick-dots
-{
+.slick-dots {
 	position: absolute;
 	bottom: -25px;
 
@@ -22,8 +19,8 @@
 
 	text-align: center;
 }
-.slick-dots li
-{
+
+.slick-dots li {
 	position: relative;
 
 	display: inline-block;
@@ -35,8 +32,8 @@
 
 	cursor: pointer;
 }
-.slick-dots li button
-{
+
+.slick-dots li button {
 	font-size: 0;
 	line-height: 0;
 
@@ -53,18 +50,18 @@
 	outline: none;
 	background: transparent;
 }
+
 .slick-dots li button:hover,
-.slick-dots li button:focus
-{
+.slick-dots li button:focus {
 	outline: none;
 }
+
 .slick-dots li button:hover:before,
-.slick-dots li button:focus:before
-{
+.slick-dots li button:focus:before {
 	opacity: 1;
 }
-.slick-dots li button:before
-{
+
+.slick-dots li button:before {
 	font-family: 'slick';
 	font-size: 26px;
 	line-height: 20px;
@@ -85,9 +82,8 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
-.slick-dots li.slick-active button:before
-{
+
+.slick-dots li.slick-active button:before {
 	opacity: 0.75;
-	color:  #627479;
-;
+	color: var(--c-green);;
 }
