--- a/themes/RogersHood-theme/assets/css/frontend/base/button.css
+++ b/themes/RogersHood-theme/assets/css/frontend/base/button.css
@@ -17,6 +17,7 @@
 	min-height: 50px !important;
 	min-width: 160px !important;
 	padding: 14px 43.5px !important;
+	text-align: center;
 	text-decoration: none !important;
 	transition: background 300ms ease-in !important;
 }
