--- a/themes/RogersHood-theme/assets/css/frontend/woocommerce/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/woocommerce/index.css
@@ -1,4 +1,5 @@
 @import url("single-product.css");
 @import url("cart.css");
+@import url("login-page.css");
 /*@import url("checkout.css");*/
 /*@import url("thank-you.css");*/
