--- a/themes/RogersHood-theme/assets/css/frontend/templates/single-post.css
+++ b/themes/RogersHood-theme/assets/css/frontend/templates/single-post.css
@@ -49,11 +49,20 @@
 
 .single-post__content p:first-child {
 	line-height: 24px;
+	margin-bottom: 40px;
 }
 
 .single-post__content p {
 	line-height: 1.375;
-	margin: 0;
+}
+
+.single-post__content h2.is-style-h3,
+.editor-styles-wrapper h2.is-style-h3 {
+	font-family: var(--ff-sofia-pro);
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 24px;
+	margin-top: 30px;
 }
 
 .single-post__content p:first-child::first-letter {
@@ -82,11 +91,10 @@
 	padding: 0;
 }
 
-
 .meal-fab {
 	float: left;
-	position: relative;
 	margin-right: 15px;
-	top: 10px;
 	padding: 4px 12px 2px;
+	position: relative;
+	top: 10px;
 }
