getting up to speed

--- a/themes/RogersHood-theme/assets/css/frontend/components/footer.css
+++ b/themes/RogersHood-theme/assets/css/frontend/components/footer.css
@@ -1,5 +1,6 @@
 .footer__container {
 	background-color: var(--wp--preset--color--green);
+	clear: both;
 	display: flex;
 	flex-direction: row;
 	gap: 56px;
