--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -32,3 +32,4 @@
 @import url("support-cards.css");
 @import url("tabs.css");
 @import url("testimonials-section.css");
+@import url("suggested-products.css");
