--- a/themes/RogersHood-theme/assets/css/frontend/layout/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/layout/index.css
@@ -12,6 +12,10 @@ html.fonts-loaded {
 	margin-top: 0 !important;
 }
 
+.clear-both {
+	clear: both;
+}
+
 img,
 picture,
 video {
@@ -46,6 +50,16 @@ video {
 		padding-top: 100px;
 		padding-bottom: 100px;
 	}
+}
+
+.full-bleed-section {
+	margin-left: calc(50% - 50vw);
+	max-width: 100vw;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	width: 100vw;
+
 }
 
 .rh-block--full-bleed {
@@ -296,15 +310,6 @@ body.admin-bar .header {
 	grid-row: span 3;
 }
 
-
-@media all and (min-width: 1480px) {
-	.rh-block {
-		margin-left: -20px;
-		margin-right: -20px;
-		width: 1440px;
-
-	}
-}
 
 .row--no-gap {
 	grid-gap: 0;
