--- a/themes/RogersHood-theme/assets/css/frontend/woocommerce/my-account.css
+++ b/themes/RogersHood-theme/assets/css/frontend/woocommerce/my-account.css
@@ -3,9 +3,9 @@
 	gap: 40px;
 	justify-content: flex-start;
 	list-style: none;
-	padding-left: 0;
 	margin-bottom: 40px;
 	margin-top: 48px;
+	padding-left: 0;
 	width: 100%;
 }
 
@@ -16,11 +16,11 @@
 	border-radius: 42px !important;
 	color: var(--wp--preset--color--black) !important;
 	display: flex;
+	font-weight: 500 !important;
 	justify-content: center;
 	padding: 8px 16px !important;
 	text-align: center;
 	text-decoration: none !important;
-	font-weight: 500 !important;
 	transition: background 300ms ease-in !important;
 }
 
@@ -31,11 +31,10 @@
 }
 
 .woocommerce-MyAccount-navigation-link.is-active a {
-	color: var(--wp--preset--color--green) !important;
 	background-color: var(--wp--preset--color--light-blue) !important;
 	border: 1px solid var(--wp--preset--color--light-blue) !important;
+	color: var(--wp--preset--color--white) !important;
 }
-
 
 .woocommerce-account .woocommerce-MyAccount-navigation,
 .woocommerce-account .woocommerce-MyAccount-content {
@@ -43,33 +42,71 @@
 	width: 100%;
 }
 
-.woocommerce-Address-title h2{
+.woocommerce-Address-title h2 {
+	font-family: var(--wp--preset--font-family--sofia-pro);
 	font-size: 18px;
 	line-height: 18px;
-	font-family: var(--wp--preset--font-family--sofia-pro);
 }
 
 .woocommerce-account .woocommerce-Address-title a {
+	background-color: var(--c-green) !important;
+	border: 1px solid var(--wp--preset--color--green) !important;
+	border-radius: 42px !important;
+	color: var(--c-white) !important;
 	float: none !important;
+	font-weight: 500 !important;
 	margin-bottom: 20px;
+	padding: 8px 16px !important;
+	text-align: center;
+	text-decoration: none !important;
+	transition: background 300ms ease-in !important;
 }
 
-.woocommerce-account .woocommerce-Addresses {
+.woocommerce-account .woocommerce-Address.col-1 {
 	margin-bottom: 100px;
 }
 
+.woocommerce-account .woocommerce-Addresses {
+	margin-bottom: 50px;
+}
+
 .woocommerce-account .woocommerce-address-fields {
-	width: 600px;
-	max-width: 100%;
 	margin-left: auto;
 	margin-right: auto;
+	max-width: 100%;
+	width: 600px;
 }
 
+.woocommerce-MyAccount-content input,
 .woocommerce-input-wrapper > input {
-	border: 1px solid #eeeeee;
-	min-height: 42px;
+	border: 1px solid #eee;
 	border-radius: 12px;
 	margin-bottom: 14px !important;
+	min-height: 42px;
+	padding: 5px 10px;
 }
 
+@media (--bp-medium) {
+	.rh_account_page_column--right {
+		margin-right: 50px;
+	}
+}
 
+.rh_account_page_column--left fieldset {
+	border: none;
+	padding: 0;
+}
+
+.rh_account_page_column legend {
+	font-weight: 500;
+	margin-bottom: 24px;
+}
+
+.woocommerce .rh_account_page_column p {
+	margin-bottom: 24px;
+}
+
+.woocommerce .rh_account_page_column .form-row-first,
+.woocommerce .rh_account_page_column .form-row-last {
+	width: 100%;
+}
