--- a/themes/RogersHood-theme/assets/css/frontend/woocommerce/my-account.css
+++ b/themes/RogersHood-theme/assets/css/frontend/woocommerce/my-account.css
@@ -9,6 +9,7 @@
 	width: 100%;
 }
 
+
 .woocommerce-MyAccount-navigation-link a {
 	align-items: center;
 	background-color: var(--c-white) !important;
@@ -48,6 +49,7 @@
 	line-height: 18px;
 }
 
+.woocommerce-EditAccountForm button,
 .woocommerce-account .woocommerce-Address-title a {
 	background-color: var(--c-green) !important;
 	border: 1px solid var(--wp--preset--color--green) !important;
@@ -56,7 +58,9 @@
 	float: none !important;
 	font-weight: 500 !important;
 	margin-bottom: 20px;
-	padding: 8px 16px !important;
+	min-height: 50px;
+	min-width: 160px;
+	padding: 0 !important;
 	text-align: center;
 	text-decoration: none !important;
 	transition: background 300ms ease-in !important;
