--- a/themes/RogersHood-theme/assets/css/blocks/hub-cards.css
+++ b/themes/RogersHood-theme/assets/css/blocks/hub-cards.css
@@ -22,6 +22,26 @@
 	background-image: revert !important;
 }
 
+.hub-card__background_image__container {
+	background-size: cover;
+	background-blend-mode: overlay;
+}
+
+.hub-card__background_image__container .overlay {
+	background: rgba(0,0,0,0.70);
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	opacity: 0;
+	transition: all 300ms;
+}
+
+.hub-card:hover .hub-card__background_image__container .overlay {
+	opacity: 1;
+}
+
 .hub-card__content__inner {
 	bottom: 0;
 	display: flex;
