--- a/themes/RogersHood-theme/assets/css/frontend/global/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/global/index.css
@@ -12,7 +12,7 @@ html {
 }
 
 p {
-	line-height: 24px;
+	line-height: 1.5;
 }
 
 .hidden {
@@ -34,4 +34,37 @@ p {
 
 .list-none {
 	list-style: none;
+}
+
+.search-form {
+	display: flex;
+	width: 100%;
+	gap: 12px;
+}
+
+.screen-reader-text,
+.screen-reader-text span {
+	border: 0;
+	clip: rect(1px, 1px, 1px, 1px);
+	clip-path: inset(50%);
+	height: 1px;
+	margin: -1px;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+	width: 1px;
+	word-wrap: normal !important; /* many screen reader and browser combinations announce broken words as they would appear visually */
+}
+
+.search-form input[type="search"] {
+	background-color: var(--wp--preset--color--white);
+	border: 1px solid var(--wp--preset--color--white);
+	border-radius: 22px;
+	height: 46px;
+	text-indent: 20px;
+	flex: 1 1 auto;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+	-webkit-appearance: none;
 }
