--- a/themes/RogersHood-theme/assets/css/frontend/woocommerce/my-account.css
+++ b/themes/RogersHood-theme/assets/css/frontend/woocommerce/my-account.css
@@ -68,7 +68,7 @@
 }
 
 
-.woocommerce button,
+.woocommerce-button,
 .woocommerce-EditAccountForm button {
 	background-color: var(--c-green) !important;
 	border: 1px solid var(--wp--preset--color--green) !important;
