Adding parent class rh-login-page to woocommerce-button

--- a/themes/RogersHood-theme/assets/css/frontend/woocommerce/my-account.css
+++ b/themes/RogersHood-theme/assets/css/frontend/woocommerce/my-account.css
@@ -68,8 +68,8 @@
 }
 
 
-.woocommerce-button,
-.woocommerce-EditAccountForm button {
+.rh-login-page .woocommerce-button,
+.rh-login-page .woocommerce-EditAccountForm button {
 	background-color: var(--c-green) !important;
 	border: 1px solid var(--wp--preset--color--green) !important;
 	border-radius: 42px !important;
