--- a/themes/RogersHood-theme/assets/css/frontend/woocommerce/login-page.css
+++ b/themes/RogersHood-theme/assets/css/frontend/woocommerce/login-page.css
@@ -99,3 +99,14 @@
 	margin-top: 50px;
 }
 
+#customer_login .u-column1.col-1 {
+	float: none;
+	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	width: 400px;
+}
+
+#customer_login h2 {
+	 text-align: center;
+}
