--- a/themes/RogersHood-theme/assets/css/frontend/global/typography.css
+++ b/themes/RogersHood-theme/assets/css/frontend/global/typography.css
@@ -78,6 +78,11 @@ body {
 	margin-top: 0;
 }
 
+.p-80 {
+	padding-bottom: 80px;
+	padding-top: 80px;
+}
+
 
 .max-width-headings {
 	margin-left: auto;
