changes to search results

--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -33,3 +33,4 @@
 @import url("tabs.css");
 @import url("testimonials-section.css");
 @import url("suggested-products.css");
+@import url("top-help-search.css");
