--- a/themes/RogersHood-theme/assets/css/blocks/top-help-search.css
+++ b/themes/RogersHood-theme/assets/css/blocks/top-help-search.css
@@ -1,3 +1,11 @@
+.top-search-container {
+	padding: 0;
+}
+
+.top-search-result-container {
+	padding: 80px 24px;
+}
+
 .top-search-inner {
 	grid-column-start: 2;
 	grid-column-end: span 10;
