--- a/themes/RogersHood-theme/assets/css/frontend/woocommerce/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/woocommerce/index.css
@@ -4,3 +4,4 @@
 @import url("my-account.css");
 /*@import url("checkout.css");*/
 /*@import url("thank-you.css");*/
+@import url("product-archive.css");
