--- a/themes/RogersHood-theme/assets/css/frontend/woocommerce/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/woocommerce/index.css
@@ -1,6 +1,11 @@
 @import url("single-product.css");
+
 @import url("cart.css");
+
 @import url("login-page.css");
+
 @import url("my-account.css");
+
 /*@import url("checkout.css");*/
-/*@import url("thank-you.css");*/
+
+@import url("thank-you.css");
