--- a/themes/RogersHood-theme/assets/css/frontend/layout/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/layout/index.css
@@ -315,3 +315,9 @@ body.admin-bar .header {
 	grid-gap: 0;
 }
 
+.single-post .rh-block {
+	width: 1440px;
+	max-width: 100vw;
+	margin-left: 50%;
+	transform: translateX(-50%);
+}
