--- a/themes/RogersHood-theme/assets/css/frontend/woocommerce/checkout.css
+++ b/themes/RogersHood-theme/assets/css/frontend/woocommerce/checkout.css
@@ -1,31 +1,40 @@
-.woocommerce-checkout .page-container .woocommerce{
+.woocommerce-checkout .page-container .woocommerce {
 	max-width: 1240px;
 	margin: auto;
 }
-.woocommerce form .form-row-first, .woocommerce form .form-row-last, .woocommerce-page form .form-row-first, .woocommerce-page form .form-row-last{
-	width: calc( 50% - 2.5px );
+.woocommerce form .form-row-first,
+.woocommerce form .form-row-last,
+.woocommerce-page form .form-row-first,
+.woocommerce-page form .form-row-last {
+	width: calc(50% - 2.5px);
 }
 
-form.checkout .select2-container--default .select2-selection--single .select2-selection__rendered {
+form.checkout
+	.select2-container--default
+	.select2-selection--single
+	.select2-selection__rendered {
 	line-height: 42px;
 	padding: 0 29px;
 }
 
-form.checkout .select2-container .select2-selection--single{
+form.checkout .select2-container .select2-selection--single {
 	height: 42px;
 }
-form.checkout .select2-container--default .select2-selection--single .select2-selection__arrow {
+form.checkout
+	.select2-container--default
+	.select2-selection--single
+	.select2-selection__arrow {
 	height: 40px;
 }
 
 .woocommerce form.checkout .form-row input.input-text,
-.woocommerce form.checkout .form-row textarea{
+.woocommerce form.checkout .form-row textarea {
 	padding: 0 29px;
 }
 
-.woocommerce form.checkout .woocommerce-input-wrapper > input{
-	margin-bottom: 0px!important;
-	color: var(--Dark-Grey, #5E5E5E);
+.woocommerce form.checkout .woocommerce-input-wrapper > input {
+	margin-bottom: 0px !important;
+	color: var(--Dark-Grey, #5e5e5e);
 	font-family: "Sofia Pro";
 	font-size: 16px;
 	font-style: normal;
@@ -33,12 +42,12 @@ form.checkout .select2-container--default .select2-selection--single .select2-se
 	line-height: normal;
 }
 
-.woocommerce form.checkout .form-row{
+.woocommerce form.checkout .form-row {
 	margin: 0 0 12px;
 	padding: 2.5px;
 }
 
-.woocommerce form.checkout .checkout-row{
+.woocommerce form.checkout .checkout-row {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -48,7 +57,7 @@ form.checkout .select2-container--default .select2-selection--single .select2-se
 	margin-left: -15px;
 }
 .woocommerce form.checkout .checkout-right,
-.woocommerce form.checkout .checkout-left{
+.woocommerce form.checkout .checkout-left {
 	-webkit-box-flex: 0;
 	-ms-flex: 0 0 100%;
 	flex: 0 0 100%;
@@ -56,31 +65,36 @@ form.checkout .select2-container--default .select2-selection--single .select2-se
 	padding: 0 15px;
 }
 
-div.woocommerce-checkout-review-order-table-new{
+div.woocommerce-checkout-review-order-table-new {
 	border-radius: 12px;
 	padding: 15px 0px 55px;
 }
-div.woocommerce-checkout-review-order-table-new h4{
-	text-align:center;
+div.woocommerce-checkout-review-order-table-new h4 {
+	text-align: center;
 	margin: 0 0 33px;
 }
-div.woocommerce-checkout-review-order-table-new table.woocommerce-checkout-review-order-table-new{
+div.woocommerce-checkout-review-order-table-new
+	table.woocommerce-checkout-review-order-table-new {
 	border: none;
 }
-div.woocommerce-checkout-review-order-table-new table.woocommerce-checkout-review-order-table-new th,
-div.woocommerce-checkout-review-order-table-new table.woocommerce-checkout-review-order-table-new td{
+div.woocommerce-checkout-review-order-table-new
+	table.woocommerce-checkout-review-order-table-new
+	th,
+div.woocommerce-checkout-review-order-table-new
+	table.woocommerce-checkout-review-order-table-new
+	td {
 	border-top: none;
 }
-table.woocommerce-checkout-review-order-table-new .product-thumbnail img{
+table.woocommerce-checkout-review-order-table-new .product-thumbnail img {
 	max-width: 110px;
 	height: 107px;
 	object-fit: contain;
 }
-table.woocommerce-checkout-review-order-table-new .product-name br{
+table.woocommerce-checkout-review-order-table-new .product-name br {
 	line-height: 0;
 	display: block;
 }
-table.woocommerce-checkout-review-order-table-new .product-name{
+table.woocommerce-checkout-review-order-table-new .product-name {
 	color: var(--Black, #121212);
 	font-family: "Sofia Pro";
 	font-size: 18px;
@@ -88,20 +102,31 @@ table.woocommerce-checkout-review-order-table-new .product-name{
 	font-weight: 500;
 	line-height: normal;
 }
-table.woocommerce-checkout-review-order-table-new .product-name .quantity-field{
+table.woocommerce-checkout-review-order-table-new
+	.product-name
+	.quantity-field {
 	border: 1px solid var(--Green, #627479);
 	border-radius: 40px;
 	height: 32px;
 	display: inline-block;
 	margin: 18px 0;
 }
-table.woocommerce-checkout-review-order-table-new .product-name .quantity-field input{
+table.woocommerce-checkout-review-order-table-new
+	.product-name
+	.quantity-field
+	input {
 	width: auto;
 	pointer-events: none;
 	margin-right: -18px;
 }
-table.woocommerce-checkout-review-order-table-new .product-name .quantity-field input,
-table.woocommerce-checkout-review-order-table-new .product-name .quantity-field button{
+table.woocommerce-checkout-review-order-table-new
+	.product-name
+	.quantity-field
+	input,
+table.woocommerce-checkout-review-order-table-new
+	.product-name
+	.quantity-field
+	button {
 	border: none;
 	background: transparent;
 	width: 24px;
@@ -110,8 +135,16 @@ table.woocommerce-checkout-review-order-table-new .product-name .quantity-field 
 	padding-left: 0;
 	padding-right: 0;
 }
-.woocommerce form.checkout .checkout-right div.woocommerce-checkout-review-order-table-new #place_order,
-.woocommerce form.checkout .checkout-right div.woocommerce-checkout-review-order-table-new .apply_coupon{
+.woocommerce
+	form.checkout
+	.checkout-right
+	div.woocommerce-checkout-review-order-table-new
+	#place_order,
+.woocommerce
+	form.checkout
+	.checkout-right
+	div.woocommerce-checkout-review-order-table-new
+	.apply_coupon {
 	width: 180px;
 	max-width: 100%;
 	padding: 14px 10px;
@@ -127,45 +160,97 @@ table.woocommerce-checkout-review-order-table-new .product-name .quantity-field 
 	box-sizing: border-box;
 }
 
-
-.woocommerce form.checkout  div.woocommerce-checkout-review-order-table-new .woocommerce-input-wrapper > input#coupon_code{
+.woocommerce
+	form.checkout
+	div.woocommerce-checkout-review-order-table-new
+	.woocommerce-input-wrapper
+	> input#coupon_code {
 	padding: 8px 16px;
 	height: 52px;
 }
-.woocommerce form.checkout  div.woocommerce-checkout-review-order-table-new table tfoot tr td label span,
-.woocommerce form.checkout  div.woocommerce-checkout-review-order-table-new table tfoot tr td label bdi{
+.woocommerce
+	form.checkout
+	div.woocommerce-checkout-review-order-table-new
+	table
+	tfoot
+	tr
+	td
+	label
+	span,
+.woocommerce
+	form.checkout
+	div.woocommerce-checkout-review-order-table-new
+	table
+	tfoot
+	tr
+	td
+	label
+	bdi {
 	font-weight: 300;
 }
-.woocommerce form.checkout  div.woocommerce-checkout-review-order-table-new table tfoot tr > td{
+.woocommerce
+	form.checkout
+	div.woocommerce-checkout-review-order-table-new
+	table
+	tfoot
+	tr
+	> td {
 	text-align: right;
 }
-.woocommerce form.checkout  div.woocommerce-checkout-review-order-table-new table tfoot tr th,
-.woocommerce form.checkout  div.woocommerce-checkout-review-order-table-new table tfoot tr td{
+.woocommerce
+	form.checkout
+	div.woocommerce-checkout-review-order-table-new
+	table
+	tfoot
+	tr
+	th,
+.woocommerce
+	form.checkout
+	div.woocommerce-checkout-review-order-table-new
+	table
+	tfoot
+	tr
+	td {
 	font-weight: 300;
 	line-height: normal;
 }
-.woocommerce form.checkout  div.woocommerce-checkout-review-order-table-new table tfoot tr:last-child th,
-.woocommerce form.checkout  div.woocommerce-checkout-review-order-table-new table tfoot tr:last-child td{
+.woocommerce
+	form.checkout
+	div.woocommerce-checkout-review-order-table-new
+	table
+	tfoot
+	tr:last-child
+	th,
+.woocommerce
+	form.checkout
+	div.woocommerce-checkout-review-order-table-new
+	table
+	tfoot
+	tr:last-child
+	td {
 	font-weight: 700;
 	font-size: 18px;
 }
-.woocommerce ul#shipping_method li:last-child{
+.woocommerce ul#shipping_method li:last-child {
 	margin-bottom: 0;
 }
-.woocommerce-checkout #payment{
+.woocommerce-checkout #payment {
 	background: transparent;
 }
-.woocommerce-checkout #payment ul.payment_methods{
+.woocommerce-checkout #payment ul.payment_methods {
 	padding: 0;
 	border-bottom: none;
 }
 .woocommerce-checkout #payment div.payment_box::before,
 .woocommerce-checkout #payment div.payment_box::after,
 .woocommerce-checkout #payment ul.payment_methods::after,
-.woocommerce-checkout #payment ul.payment_methods li:not(.woocommerce-notice)::after{
+.woocommerce-checkout
+	#payment
+	ul.payment_methods
+	li:not(.woocommerce-notice)::after {
 	display: none;
 }
-.woocommerce-checkout #payment div.payment_box{
+.woocommerce-checkout #payment div.payment_box {
 	background: transparent;
 }
 
@@ -173,66 +258,83 @@ table.woocommerce-checkout-review-order-table-new .product-name .quantity-field 
 	padding: 0;
 }
 .payment_method_woocommerce_payments fieldset,
-.payment_method_woocommerce_payments fieldset > div{
+.payment_method_woocommerce_payments fieldset > div {
 	border: none;
-	padding: 0!important;
+	padding: 0 !important;
 }
 .checkout-left .custom-checkboxes {
 	margin-top: 74px;
 }
-.checkout-left .custom-checkboxes p.form-row{
+.checkout-left .custom-checkboxes p.form-row {
 	padding-left: 0;
 	padding-right: 0;
 }
 
-.woocommerce form .form-row .required{
+.woocommerce form .form-row .required {
 	color: inherit;
 }
 
-@media all and ( max-width: 767px ) {
+@media all and (max-width: 767px) {
 	div.woocommerce-checkout-review-order-table-new h4,
-	div.woocommerce-checkout-review-order-table-new table tbody{
+	div.woocommerce-checkout-review-order-table-new table tbody {
 		display: none;
 	}
-	.checkout-right{
-		border-top: 1px solid var(--Grey, #EBEBEB);
+	.checkout-right {
+		border-top: 1px solid var(--Grey, #ebebeb);
 	}
-	.woocommerce form .form-row-first, .woocommerce form .form-row-last, .woocommerce-page form .form-row-first, .woocommerce-page form .form-row-last{
+	.woocommerce form .form-row-first,
+	.woocommerce form .form-row-last,
+	.woocommerce-page form .form-row-first,
+	.woocommerce-page form .form-row-last {
 		width: 100%;
 	}
-	.woocommerce form.checkout  div.woocommerce-checkout-review-order-table-new table tfoot tr > th{
+	.woocommerce
+		form.checkout
+		div.woocommerce-checkout-review-order-table-new
+		table
+		tfoot
+		tr
+		> th {
 		padding-left: 0;
 	}
-	.woocommerce form.checkout  div.woocommerce-checkout-review-order-table-new table tfoot tr > td{
+	.woocommerce
+		form.checkout
+		div.woocommerce-checkout-review-order-table-new
+		table
+		tfoot
+		tr
+		> td {
 		padding-right: 0;
 	}
-	.woocommerce-checkout .page-container{
+	.woocommerce-checkout .page-container {
 		padding: 0 30px;
 	}
 }
 
-@media all and ( min-width: 768px ) {
+@media all and (min-width: 768px) {
 	.woocommerce form.checkout .checkout-right,
 	.woocommerce form.checkout .checkout-left {
 		-ms-flex: 0 0 50%;
 		flex: 0 0 50%;
 		max-width: 50%;
 	}
-	.woocommerce form.checkout .checkout-right{
-		/*padding-left: 2%;*/
-	}
-	div.woocommerce-checkout-review-order-table-new{
+	/* .woocommerce form.checkout .checkout-right {
+		padding-left: 2%;
+	} */
+	div.woocommerce-checkout-review-order-table-new {
 		padding: 50px 15px;
-		background: #F9F9F9;
+		background: #f9f9f9;
+		position: sticky;
+		top: calc(32px + 10px);
 	}
 }
-@media all and ( min-width: 880px ) {
-	.woocommerce form.checkout .checkout-right{
+@media all and (min-width: 880px) {
+	.woocommerce form.checkout .checkout-right {
 		padding-left: 5%;
 	}
 }
-@media all and ( min-width: 1050px ) {
-	.woocommerce form.checkout .checkout-right{
+@media all and (min-width: 1050px) {
+	.woocommerce form.checkout .checkout-right {
 		padding-left: 10.5515%;
 	}
 }
