--- a/themes/RogersHood-theme/assets/css/frontend/templates/single-post.css
+++ b/themes/RogersHood-theme/assets/css/frontend/templates/single-post.css
@@ -39,6 +39,8 @@
 
 .single-post__image {
 	line-height: 0;
+	margin-left: -20px;
+	margin-right: -20px;
 	margin-bottom: 56px;
 }
 
@@ -64,7 +66,7 @@
 	margin-top: 30px;
 }
 
-.single-post__content  > p:first-child::first-letter {
+.single-post__content > p:first-child::first-letter {
 	font-family: Scilla, serif;
 	font-size: 42px;
 }
@@ -96,4 +98,20 @@
 	padding: 4px 12px 2px;
 	position: relative;
 	top: 10px;
+}
+
+.parallax {
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+	height: 300px;
+}
+
+@media only screen and (--bp-large-2) {
+	.single-post__image {
+		margin-left: 0;
+		margin-right: 0;
+	}
 }
