--- a/themes/RogersHood-theme/assets/css/frontend/global/typography.css
+++ b/themes/RogersHood-theme/assets/css/frontend/global/typography.css
@@ -58,6 +58,10 @@ body {
 	border-radius: 12px;
 }
 
+.mb-0 {
+	margin-bottom: 0;
+}
+
 .mb-12 {
 	margin-bottom: 12px;
 }
@@ -83,6 +87,25 @@ body {
 	padding-top: 80px;
 }
 
+/* Added classes for styling Single Post Start */
+
+.row-gap-0 {
+	row-gap: 0;
+}
+
+@media (max-width: 768px) {
+	.wp-block-table td {
+		font-size: 10px;
+	}
+}
+
+@media (max-width: 556px) {
+	.wp-block-table td {
+		font-size: 8px;
+	}
+}
+
+/* Added classes for styling Single Post End */
 
 .max-width-headings {
 	margin-left: auto;
