--- a/themes/RogersHood-theme/assets/css/frontend/templates/single-post.css
+++ b/themes/RogersHood-theme/assets/css/frontend/templates/single-post.css
@@ -39,16 +39,16 @@
 
 .single-post__image {
 	line-height: 0;
+	margin-bottom: 56px;
 	margin-left: -20px;
 	margin-right: -20px;
-	margin-bottom: 56px;
 }
 
 .single-post__content {
 	color: var(--c-dark-grey);
 }
 
-.single-post__content p:first-child {
+.single-post__content > p:first-child {
 	line-height: 24px;
 	margin-bottom: 40px;
 }
@@ -105,13 +105,13 @@
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	width: 100%;
 	height: 300px;
+	width: 100%;
 }
 
 @media only screen and (--bp-large-2) {
 	.single-post__image {
-		margin-left: 0;
-		margin-right: 0;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
