--- a/themes/RogersHood-theme/assets/css/frontend/woocommerce/single-product.css
+++ b/themes/RogersHood-theme/assets/css/frontend/woocommerce/single-product.css
@@ -103,7 +103,7 @@
 	line-height: 0;
 }
 
-.bar-thumbnail img{
+.bar-thumbnail img {
 	max-height: 100%;
 	max-width: 100%;
 	height: 63px;
@@ -115,3 +115,39 @@
 .single_add_to_cart_button {
 	text-align: center;
 }
+
+
+.single-product .flex-control-nav {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 20px;
+}
+
+@media all and (width > 767px) {
+
+	.single-product .images {
+		display: flex;
+		flex-direction: row-reverse;
+		gap: 20px;
+	}
+
+	.single-product .flex-control-nav {
+		display: flex;
+		flex-basis: 100px;
+		flex-direction: column;
+
+		flex-grow: 0;
+		flex-shrink: 0;
+	}
+
+	.single-product .flex-control-nav li {
+		width: 100% !important;
+	}
+}
+
+@media all and (width < 768px) {
+	.single-product .entry-summary {
+		padding-left: 0;
+	}
+}
+
